--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@
 }
 
 .perfect-solution {
-  background: url(../img/perfect-solution/Group\ 678.png) no-repeat;
+  background: url(../img/perfect-solution/lines-background.png) no-repeat;
 }
 
 .growing {
